Change UTF-8 '©' to '(C)' in deb-version.5
Unfuzzy translations.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 dpkg (1.14.20) UNRELEASED; urgency=low
 
-  *
+  * Change UTF-8 '©' to '(C)' in deb-version.5 (unfuzzy translations).
 
  -- Guillem Jover <guillem@debian.org>  Mon, 12 May 2008 09:04:34 +0300
 
