--- a/man/deb-version.5
+++ b/man/deb-version.5
@@ -118,9 +118,9 @@ support for it later in the 1.10.x series.
 .BR deb (5),
 .BR dpkg (1)
 .SH AUTHORS
-Copyright © 1996,1997,1998 Ian Jackson and Christian Schwarz.
+Copyright (C) 1996,1997,1998 Ian Jackson and Christian Schwarz
 .br
-Copyright © 2007 Frank Lichtenheld
+Copyright (C) 2007 Frank Lichtenheld
 .sp
 This is free software; see the GNU General Public Licence version 2 or later
 for copying conditions. There is NO WARRANTY.
