--- a/man/po/de.po
+++ b/man/po/de.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2008-05-08 22:14+0200\n"
-"PO-Revision-Date: 2008-05-10 17:43+0200\n"
+"POT-Creation-Date: 2008-05-13 04:42+0300\n"
+"PO-Revision-Date: 2008-05-13 04:40+0300\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -1461,13 +1461,13 @@ msgstr "AUTOREN"
 # Kodierung ist hier nicht richtig!
 # type: Plain text
 #: ../../man/deb-version.5:122
-msgid "Copyright Â© 1996,1997,1998 Ian Jackson and Christian Schwarz."
-msgstr "Copyright © 1996,1997,1998 Ian Jackson and Christian Schwarz."
+msgid "Copyright (C) 1996,1997,1998 Ian Jackson and Christian Schwarz"
+msgstr "Copyright © 1996,1997,1998 Ian Jackson and Christian Schwarz"
 
 # type: Plain text
-#: ../../man/deb-version.5:124
-msgid "Copyright Â© 2007 Frank Lichtenheld"
-msgstr "Copyright © 2007 Frank Lichtenheld"
+#: ../../man/deb-version.5:124 ../../man/dpkg-buildpackage.1:307
+msgid "Copyright (C) 2007 Frank Lichtenheld"
+msgstr "Copyright (C) 2007 Frank Lichtenheld"
 
 # type: TH
 #: ../../man/deb-old.5:1
@@ -5825,11 +5825,6 @@ msgid ""
 msgstr ""
 "B<dpkg-source>(1), B<dpkg-architecture>(1), B<dpkg-genchanges>(1), B<gpg>"
 "(1), B<pgp>(1)."
-
-# type: Plain text
-#: ../../man/dpkg-buildpackage.1:307
-msgid "Copyright (C) 2007 Frank Lichtenheld"
-msgstr "Copyright (C) 2007 Frank Lichtenheld"
 
 # type: TH
 #: ../../man/dpkg-checkbuilddeps.1:1
