--- a/man/po/sv.po
+++ b/man/po/sv.po
@@ -5,8 +5,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-05-12 08:17+0300\n"
-"PO-Revision-Date: 2008-05-09 06:08+0100\n"
+"POT-Creation-Date: 2008-05-13 04:42+0300\n"
+"PO-Revision-Date: 2008-05-13 04:42+0300\n"
 "Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -1430,13 +1430,12 @@ msgstr "FÖRFATTARE"
 
 # type: Plain text
 #: ../../man/deb-version.5:122
-msgid "Copyright © 1996,1997,1998 Ian Jackson and Christian Schwarz."
-msgstr ""
-"Upphovsrättsskyddat © 1996,1997,1998 Ian Jackson och Christian Schwarz."
+msgid "Copyright (C) 1996,1997,1998 Ian Jackson and Christian Schwarz"
+msgstr "Upphovsrättsskyddat © 1996,1997,1998 Ian Jackson och Christian Schwarz"
 
 # type: Plain text
-#: ../../man/deb-version.5:124
-msgid "Copyright © 2007 Frank Lichtenheld"
+#: ../../man/deb-version.5:124 ../../man/dpkg-buildpackage.1:307
+msgid "Copyright (C) 2007 Frank Lichtenheld"
 msgstr "Upphovsrättsskyddat © 2007 Frank Lichtenheld"
 
 # type: TH
@@ -5688,11 +5687,6 @@ msgid ""
 msgstr ""
 "B<dpkg-source>(1), B<dpkg-architecture>(1), B<dpkg-genchanges>(1), B<gpg>"
 "(1), B<pgp>(1)."
-
-# type: Plain text
-#: ../../man/dpkg-buildpackage.1:307
-msgid "Copyright (C) 2007 Frank Lichtenheld"
-msgstr "Upphovsrättsskyddat © 2007 Frank Lichtenheld"
 
 # type: TH
 #: ../../man/dpkg-checkbuilddeps.1:1
