--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-05-13  Guillem Jover  <guillem@debian.org>
+
+	* src/main.c (setforce): Add help output for '--force-breaks'.
+
 2008-05-12  Guillem Jover  <guillem@debian.org>
 
 	* configure.ac: Bump version to 1.14.20~.
