man/dpkg.1: Document triggers --debug values

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2008-05-13  Sven Joachim  <svenjoac@gmx.de>
+
+	* dpkg.1: Document triggers --debug values.
+
 2008-05-13  Guillem Jover  <guillem@debian.org>
 
 	* deb-version.5: Change '©' to '(C)'.
