--- a/man/dpkg.1
+++ b/man/dpkg.1
@@ -326,17 +326,20 @@ values together from the list below (note that these values may change
 in future releases). \fB\-Dh\fP or \fB\-\-debug=help\fP display these
 debugging values.
 
- number  description
-    1   Generally helpful progress information
-    2   Invocation and status of maintainer scripts
-   10   Output for each file processed
-  100   Lots of output for each file processed
-   20   Output for each configuration file
-  200   Lots of output for each configuration file
-   40   Dependencies and conflicts
-  400   Lots of dependencies/conflicts output
- 1000   Lots of drivel about e.g. the dpkg/info dir
- 2000   Insane amounts of drivel
+    number  description
+         1   Generally helpful progress information
+         2   Invocation and status of maintainer scripts
+        10   Output for each file processed
+       100   Lots of output for each file processed
+        20   Output for each configuration file
+       200   Lots of output for each configuration file
+        40   Dependencies and conflicts
+       400   Lots of dependencies/conflicts output
+     10000   Trigger activation and processing
+     20000   Lots of output regarding triggers
+     40000   Silly amounts of output regarding triggers
+      1000   Lots of drivel about e.g. the dpkg/info dir
+      2000   Insane amounts of drivel
 .TP
 \fB\-\-force\-\fP\fIthings\fP, \fB\-\-no\-force\-\fP\fIthings\fP, \fB\-\-refuse\-\fP\fIthings\fP
 
