Updated Swedish translation.
* Updated po/sv.po to 984t0f0u.
* Updated man/po/sv.po to 1600t0f0u.
* Updated scripts/po/sv.po 471t0f0u.

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,15 @@ dpkg (1.14.20) UNRELEASED; urgency=low
   * Document --force-breaks in 'dpkg --force-help' output.
   * Document triggers --debug values in dpkg.1. Thanks to Sven Joachim.
 
+  [ Updated dpkg translations ]
+  * Swedish (Peter Karlsson).
+
+  [ Updated manpages translations ]
+  * Swedish (Peter Karlsson).
+
+  [ Updated scripts translations ]
+  * Swedish (Peter Karlsson).
+
  -- Guillem Jover <guillem@debian.org>  Mon, 12 May 2008 09:04:34 +0300
 
 dpkg (1.14.19) unstable; urgency=low
