--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2008-05-13  Peter Karlsson  <peterk@debian.org>
+
+	* po/sv.po: Updated to 1600t.
+
 2008-05-13  Guillem Jover  <guillem@debian.org>
 
 	* po/dpkg-man.pot: Regenerated.
