--- a/man/po/sv.po
+++ b/man/po/sv.po
@@ -6,12 +6,12 @@ msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-05-13 05:52+0300\n"
-"PO-Revision-Date: 2008-05-13 04:42+0300\n"
+"PO-Revision-Date: 2008-05-13 09:23+0100\n"
 "Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
+"Content-Transfer-Encoding: 8bit"
 
 # type: Plain text
 #: ../../man/822-date.1:2
@@ -3238,7 +3238,7 @@ msgstr ""
 
 # type: Plain text
 #: ../../man/dpkg.1:343
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "    number  description\n"
 "         1   Generally helpful progress information\n"
@@ -3255,17 +3255,20 @@ msgid ""
 "      1000   Lots of drivel about e.g. the dpkg/info dir\n"
 "      2000   Insane amounts of drivel\n"
 msgstr ""
-"  tal   beskrivning\n"
-"    1   Allmänt hjälpsam förloppsinformation\n"
-"    2   Anrop och status för utvecklarskript\n"
-"   10   Utdata för varje fil som hanteras\n"
-"  100   Massvis med utdata för varje fil som hanteras\n"
-"   20   Utdata för varje konfigurationsfil\n"
-"  200   Massvis med utdata för varje konfigurationsfil\n"
-"   40   Beroenden och konflikter\n"
-"  400   Massvis av beroende-/konfliktutdata\n"
-" 1000   Massvis av pladder om bl.a dpkg/info-katalogen\n"
-" 2000   Knäppa mängder pladder\n"
+"    tal   beskrivning\n"
+"      1   Allmänt hjälpsam förloppsinformation\n"
+"      2   Anrop och status för utvecklarskript\n"
+"     10   Utdata för varje fil som hanteras\n"
+"    100   Massvis med utdata för varje fil som hanteras\n"
+"     20   Utdata för varje konfigurationsfil\n"
+"    200   Massvis med utdata för varje konfigurationsfil\n"
+"     40   Beroenden och konflikter\n"
+"    400   Massvis av beroende-/konfliktutdata\n"
+"  10000   Aktivering och hantering av utlösare\n"
+"  20000   Massvis av utdata om utlösare\n"
+"  40000   Dumma mängder utdata om utlösare\n"
+"   1000   Massvis av pladder om bl.a dpkg/info-katalogen\n"
+"   2000   Knäppa mängder pladder\n"
 
 # type: TP
 #: ../../man/dpkg.1:343
