--- a/po/sv.po
+++ b/po/sv.po
@@ -8,12 +8,12 @@ msgstr ""
 "Project-Id-Version: dpkg 1.14.15\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-05-13 05:54+0300\n"
-"PO-Revision-Date: 2008-04-28 22:14+0200\n"
+"PO-Revision-Date: 2008-05-13 09:26+0100\n"
 "Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
-"Content-Transfer-Encoding: 8bit\n"
+"Content-Transfer-Encoding: 8bit"
 
 #: lib/compat.c:46
 msgid "unable to open tmpfile for vsnprintf"
@@ -2731,7 +2731,7 @@ msgid "invalid integer for --%s: `%.250s'"
 msgstr "ogiltigt heltal för --%s: \"%.250s\""
 
 #: src/main.c:320
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "%s forcing options - control behaviour when problems found:\n"
 "  warn but continue:  --force-<thing>,<thing>,...\n"
@@ -2795,6 +2795,7 @@ msgstr ""
 "har\n"
 "                         angivits\n"
 "  confmiss [!]           Installera alltid saknade konfigurationsfiler\n"
+"  breaks [!]             Installera även om det skulle förstöra ett annat paket\n"
 "  conflicts [!]          Tillåt installation av paket som är i konflikt\n"
 "  architecture [!]       Hantera även paket med fel arkitektur\n"
 "  overwrite-dir [!]      Skriv över ett pakets katalog med ett annats fil\n"
