--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-05-13  Peter Karlsson  <peterk@debian.org>
+
+	* sv.po: Updated to 471t.
+
 2008-05-12  Guillem Jover  <guillem@debian.org>
 
 	* dpkg-dev.pot: Regenerated.
