--- a/scripts/po/sv.po
+++ b/scripts/po/sv.po
@@ -7,13 +7,13 @@ msgstr ""
 "Project-Id-Version: dpkg 1.14.15\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-05-12 08:17+0300\n"
-"PO-Revision-Date: 2008-04-29 06:30+0100\n"
+"PO-Revision-Date: 2008-05-13 09:21+0100\n"
 "Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=n!=1;\n"
+"Plural-Forms: nplurals=2; plural=n!=1;"
 
 #: scripts/822-date.pl:12
 msgid "Usage: 822-date"
@@ -2823,9 +2823,9 @@ msgstr ""
 "modifierade binären i debian-tarbollen"
 
 #: scripts/Dpkg/Source/Package/V2.pm:319
-#, fuzzy, perl-format
+#, perl-format
 msgid "unwanted binary file: %s"
-msgstr "duplicerat binärfält i %s"
+msgstr "oönskad binärfil: %s"
 
 #: scripts/Dpkg/Source/Package/V2.pm:325
 #, perl-format
@@ -2833,6 +2833,8 @@ msgid ""
 "detected %d unwanted binary file(s) (add them in debian/source/include-"
 "binaries to allow their inclusion)."
 msgstr ""
+"upptäckte %d oönskad(e) binärfil(er) (lägg till dem i debian/source/"
+"include-binaries för att tillåta att de tas med)"
 
 #: scripts/Dpkg/Source/Package/V2.pm:338
 msgid "unrepresentable changes to source"
