--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ dpkg (1.14.20) UNRELEASED; urgency=low
   * Document triggers --debug values in dpkg.1. Thanks to Sven Joachim.
 
   [ Updated dpkg translations ]
+  * German (Sven Joachim).
   * Swedish (Peter Karlsson).
 
   [ Updated manpages translations ]
