--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-05-13  Sven Joachim  <svenjoac@gmx.de>
+
+	* de.po: Updated to 984t.
+
 2008-05-13  Peter Karlsson  <peterk@debian.org>
 
 	* sv.po: Updated to 984t.
