--- a/po/de.po
+++ b/po/de.po
@@ -8,10 +8,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Debian dpkg 1.14.18\n"
+"Project-Id-Version: Debian dpkg 1.14.20~\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-05-13 05:54+0300\n"
-"PO-Revision-Date: 2008-05-09 12:39+0200\n"
+"PO-Revision-Date: 2008-05-13 15:59+0200\n"
 "Last-Translator: Sven Joachim <svenjoac@gmx.de>\n"
 "Language-Team: German <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -2774,7 +2774,7 @@ msgid "invalid integer for --%s: `%.250s'"
 msgstr "ungültige Ganzzahl für --%s: »%.250s«"
 
 #: src/main.c:320
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "%s forcing options - control behaviour when problems found:\n"
 "  warn but continue:  --force-<thing>,<thing>,...\n"
@@ -2848,6 +2848,8 @@ msgstr ""
 "confold\n"
 "                           oder confnew ist auch angegeben.\n"
 "  confmiss [!]           Immer fehlende Konf.-dateien installieren\n"
+"  breaks [!]             Installieren, selbst wenn es andere Pakete\n"
+"                           beschädigt.\n"
 "  conflicts [!]          Installation kollidierender Pakete erlauben\n"
 "  architecture [!]       Selbst Pakete mit falscher Architektur bearbeiten\n"
 "  overwrite-dir [!]      Verzeichnis eines Pakets mit Datei eines\n"
