Re-re-re-re-re-update French translation Also remove conflict markers I inadvertenly left in po/ChangeLog

--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,7 @@ dpkg (1.14.20) UNRELEASED; urgency=low
 
   [ Updated programs translations ]
   * Basque (Piarres Beobide). Closes: #481043
+  * French (Christian Perrier).
 
  -- Guillem Jover <guillem@debian.org>  Mon, 12 May 2008 09:04:34 +0300
 
