--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,4 +1,7 @@
-<<<<<<< HEAD:po/ChangeLog
+2008-05-13  Christian Perrier  <bubulle@debian.org>
+
+	* fr.po: Updated to 984t.
+
 2008-05-13  Sven Joachim  <svenjoac@gmx.de>
 
 	* de.po: Updated to 984t.
@@ -11,11 +14,10 @@
 
 	* dpkg.pot: Regenerated.
 	* *.po: Merged with dpkg.pot.
-=======
+
 2008-05-13  Piarres Beobide  <pi+debian@beobide.net>
 
 	* eu.po: Updated to 984t.
->>>>>>> Basque translation update:po/ChangeLog
 
 2008-05-12  Guillem Jover  <guillem@debian.org>
 
