Vietnamese translation update

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ dpkg (1.14.20) UNRELEASED; urgency=low
   [ Updated dpkg translations ]
   * German (Sven Joachim).
   * Swedish (Peter Karlsson).
+  * Vietnamese (Clytie Siddall). Closes: #481199
 
   [ Updated manpages translations ]
   * Swedish (Peter Karlsson).
