--- a/scripts/po/de.po
+++ b/scripts/po/de.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: dpkg scripts\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-05-12 08:17+0300\n"
-"PO-Revision-Date: 2008-05-18 12:44+0200\n"
+"PO-Revision-Date: 2008-05-18 17:10+0200\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -1399,7 +1399,7 @@ msgstr ""
 #, perl-format
 msgid "%s shouldn't be linked with %s (it uses none of its symbols)."
 msgstr ""
-"%s sollte nicht gegen %s gelinkt werden (es verwendet keine seiner Symbole)."
+"%s sollte nicht gegen %s gelinkt werden (es verwendet keines ihrer Symbole)."
 
 #: scripts/dpkg-shlibdeps.pl:355
 #, perl-format
@@ -1408,7 +1408,7 @@ msgid ""
 "against it (they use none of its symbols)."
 msgstr ""
 "Abhängigkeit von %s könnte vermieden werden, falls »%s« nicht unnötigerweise "
-"dagegen gelinkt wäre (es verwendet keine seiner Symbole)."
+"dagegen gelinkt wäre (es verwendet keines seiner Symbole)."
 
 #: scripts/dpkg-shlibdeps.pl:368
 #, perl-format
