Update Russian scripts translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,7 @@ dpkg (1.14.20) UNRELEASED; urgency=low
   * Swedish (Peter Karlsson).
   * French (Christian Perrier).
   * German (Helge Kreutzmann).
+  * Russian (Yuri Kozlov).
 
   [ Updated programs translations ]
   * Basque (Piarres Beobide). Closes: #481043
