Add '.be' to the default dpkg-source -i regex and -I pattern
Based on a patch by Ben Finney. Closes: #481716

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-05-19  Guillem Jover  <guillem@debian.org>
+
+	* scripts/Dpkg/Source/Package.pm ($diff_ignore_default_regexp): Add
+	'.be'.
+	(@tar_ignore_default_pattern): Likewise.
+
 2008-05-12  Guillem Jover  <guillem@debian.org>
 
 	* scripts/dpkg-gencontrol.pl ($package_type): Rename to ...
