--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ dpkg (1.15.0) UNRELEASED; urgency=low
     update-alternative's verbose mode. Closes: #412487
   * Refactor subprocess signal setup.
   * Mark and coalesce similar strings for translation.
+  * Add '.be' to the default dpkg-source -i regex. Closes: #481716
+    Based on a patch by Ben Finney.
 
   [ Raphael Hertzog ]
   * Enhance dpkg-shlibdeps's error message when a library can't be found to
