Even more fixes from Sven Joachim for the German man pages

--- a/man/po/de.po
+++ b/man/po/de.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2008-05-13 05:52+0300\n"
-"PO-Revision-Date: 2008-05-18 18:48+0200\n"
+"PO-Revision-Date: 2008-05-19 22:13+0200\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -3091,7 +3091,7 @@ msgid ""
 msgstr ""
 "Vergleiche Versionsnummern, wobei I<Op> ein binärer Operator ist. B<dpkg> "
 "liefert Erfolg (Nullergebnis) falls die angegebene Bedingung erfüllt ist und "
-"einen Fehler (Nicht-Null-Ergebnis) andernfalls. Es gibt zwei Gruppen von "
+"einen Fehler (nicht-Null-Ergebnis) andernfalls. Es gibt zwei Gruppen von "
 "Operatoren, die sich in der Behandlung von leeren I<Ver1> oder I<Ver2> "
 "unterscheiden. Die folgenden behandeln leere Versionen als jünger als jede "
 "andere Version: B<lt le eq ne ge gt>. Die folgenden behandeln eine leere "
@@ -9082,7 +9082,7 @@ msgid ""
 "and finally in the root directory.  If the library is not found in any of "
 "those directories, then you get this error."
 msgstr ""
-"Das I<Programm> verwendet eine Bibliothek mit Namen I<SONAME-der-Bibliothek> "
+"Das I<Programm> verwendet eine Bibliothek mit Namen I<SONAME-der-Bibliothek>, "
 "aber B<dpkg-shlibdeps> konnte diese Bibliothek nicht finden. B<dpkg-"
 "shlibdeps> erstellt folgendermaßen eine Liste der zu prüfenden "
 "Verzeichnisse: im RPATH des Programms aufgeführte Verzeichnisse, in /etc/ld."
@@ -9242,8 +9242,8 @@ msgid ""
 msgstr ""
 "Extrahiere ein Quellpaket. Ein nicht-Options-Argument muss angegeben werden, "
 "der Name der Debian Quell-Steuer-Datei (B<.dsc>). Optional kann ein zweites "
-"Nicht-Options-Argument angegeben werden, um das Verzeichnis anzugeben, in "
-"der das Quellpaket extrahiert werden soll. Dieses Verzeichis darf dann nicht "
+"nicht-Options-Argument angegeben werden, um das Verzeichnis anzugeben, in "
+"das das Quellpaket extrahiert werden soll. Dieses Verzeichis darf dann nicht "
 "existieren. Falls kein Ausgabeverzeichnis angegeben ist, wird das Quellpaket "
 "in das Verzeichnis namens I<Quelle>-I<Version> unterhalb des aktuellen "
 "Arbeitsverzeichnisses extrahiert."
@@ -10353,9 +10353,9 @@ msgid ""
 "If no I<prefix> is supplied then the I<complete-archive> filename is taken, "
 "including directory, with any trailing B<.deb> removed."
 msgstr ""
-"Falls kein I<Präfix> bereitgestellt wird, wird der Dateiname von I<Komplett-"
-"Archiv> genommen, einschließlich Verzeichnis, wobei das abschließende B<."
-"deb> entfernt wird."
+"Falls kein I<Präfix> bereitgestellt wird, wird der Dateiname von "
+"I<Komplettarchiv> genommen, einschließlich Verzeichnis, wobei das "
+"abschließende B<.deb> entfernt wird."
 
 # type: Plain text
 #: ../../man/dpkg-split.1:52
@@ -10457,9 +10457,9 @@ msgid ""
 "should not usually already exist, though this is not an error)."
 msgstr ""
 "Falls alle Teile der Paketdatei, von der I<Teil> ein Teil ist, verfügbar "
-"sind, dann wird das Paket wieder zusammengesetzt und nach I<Komplett-"
-"Ausgabe> geschrieben (welche für gewöhnlich noch nicht existieren sollte, "
-"obgleich dies kein Fehler ist)."
+"sind, dann wird das Paket wieder zusammengesetzt und nach "
+"I<Komplettausgabe> geschrieben (welche für gewöhnlich noch nicht existieren "
+"sollte, obgleich dies kein Fehler ist)."
 
 # type: Plain text
 #: ../../man/dpkg-split.1:97
@@ -10467,8 +10467,8 @@ msgid ""
 "If not then the I<part> is copied into the queue and I<complete-output> is "
 "not created."
 msgstr ""
-"Falls nicht, wird I<Teil> in die Warteschlange kopiert und I<Komplett-"
-"Ausgabe> wird nicht erzeugt."
+"Falls nicht, wird I<Teil> in die Warteschlange kopiert und "
+"I<Komplettausgabe> wird nicht erzeugt."
 
 # type: Plain text
 #: ../../man/dpkg-split.1:104
@@ -10574,7 +10574,7 @@ msgstr ""
 #: ../../man/dpkg-split.1:147
 #, no-wrap
 msgid "B<-o>, B<--output> I<complete-output>"
-msgstr "B<-o>, B<--output> I<Komplett-Ausgabe>"
+msgstr "B<-o>, B<--output> I<Komplettausgabe>"
 
 # type: Plain text
 #: ../../man/dpkg-split.1:150
@@ -11823,11 +11823,11 @@ msgid ""
 "verbose and shorthand.  Shorthand display is the default."
 msgstr ""
 "Für jedes Paket zeigt die Liste den Paketstatus, die Priorität, den Bereich, "
-"installierte und verfügbare Versionen, den den Namen und die Kurzbeschreibung"
+"installierte und verfügbare Versionen, den Namen und die Kurzbeschreibung"
 "des Paketes, alles in einer Zeile. Durch Drücken der Taste B<»V«> kann die "
 "Anzeige der installierten und verfügbaren Version zwischen ein und aus "
 "umgeschaltet werden. Durch Drücken der Taste B<»v«> wird die Anzeige des "
-"Paketstatuses zwischen ausführlich und verkürzt umgeschaltet. Die verkürzte "
+"Paketstatus zwischen ausführlich und verkürzt umgeschaltet. Die verkürzte "
 "Anzeige ist voreingestellt."
 
 # type: Plain text
@@ -12025,6 +12025,12 @@ msgid ""
 "screen, making them very hard to handle. In practice, only hold and unhold "
 "operations are useful when applied to groups."
 msgstr ""
+"Veränderungen von großen Gruppen von Auswahlen sollten vorsichtig "
+"durchgeführt werden, da dies sofort zu einer großen Anzahl an nicht-"
+"aufgelösten Abhängigkeiten oder Konflikten führen kann, die dann alle im "
+"Bildschirm der Abhängigkeitsauflösung dargestellt werden. Dies kann dann "
+"schwer zu handhaben sein. In der Praxis sind nur die Operationen Halten und "
+"Loslassen nützlich, wenn sie auf Gruppen angewandt werden."
 
 # type: SS
 #: ../../man/dselect.1:378
