--- a/po/pt.po
+++ b/po/pt.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: dpkg 1.14\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-05-13 05:54+0300\n"
-"PO-Revision-Date: 2008-05-02 22:36+0100\n"
+"PO-Revision-Date: 2008-05-20 18:53+0100\n"
 "Last-Translator: Miguel Figueiredo <elmig@debianpt.org>\n"
 "Language-Team: Portuguese <traduz@debianpt.org>\n"
 "MIME-Version: 1.0\n"
@@ -2785,7 +2785,7 @@ msgid "invalid integer for --%s: `%.250s'"
 msgstr "número inteiro inválido para --%s: `%.250s'"
 
 #: src/main.c:320
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "%s forcing options - control behaviour when problems found:\n"
 "  warn but continue:  --force-<thing>,<thing>,...\n"
@@ -2824,52 +2824,38 @@ msgid ""
 "WARNING - use of options marked [!] can seriously damage your installation.\n"
 "Forcing options marked [*] are enabled by default.\n"
 msgstr ""
-"opções para forçar o %s - controla o comportamento quando são encontrados "
-"problemas:\n"
+"opções para forçar o %s - controla o comportamento quando são encontrados problemas:\n"
 "  avisar mas continuar:  --force-<coisa>,<coisa>,...\n"
-"  parar com erro:        --refuse-<coisa>,<coisa>,... | --no-force-"
-"<coisa>,...\n"
+"  parar com erro:        --refuse-<coisa>,<coisa>,... | --no-force-<coisa>,...\n"
 " Forçar coisas:\n"
 "  all [!]                Definir todas opções de forçar\n"
 "  downgrade [*]          Substituir um pacote por uma versão mais anterior\n"
-"  configure-any          Configurar qualquer pacote que possa vir a ajudar "
-"este\n"
-"  hold                   Processar pacotes incidentais mesmo quando estão a "
-"ser mantidos\n"
-"  bad-path               Faltam programas importantes no PATH, devendo "
-"aparecer problemas\n"
+"  configure-any          Configurar qualquer pacote que possa judar este\n"
+"  hold                   Processar pacotes incidentais mesmo quando estão a ser mantidos\n"
+"  bad-path               Faltam programas importantes no PATH, provavelmente problemas\n"
 "  not-root               Tentar (des)instalar coisas mesmo não sendo root\n"
-"  overwrite              Sobrescrever um ficheiro de um pacote com outro\n"
-"  overwrite-diverted     Sobrescrever um ficheiro desviado com uma versão "
-"sem desvios\n"
-"  bad-verify             Instalar um pacote mesmo que falhe a verificação de "
-"autenticação\n"
-"  depends-version [!]    Tornar problemas de dependências da versão em "
-"avisos\n"
-"  depends [!]            Tornar todos os problemas de dependências em "
-"avisos\n"
-"  confnew [!]            Utilizar sempre os novos ficheiros de configuração, "
-"sem perguntar\n"
-"  confold [!]            Utilizar sempre os antigos ficheiros de "
-"configuração, sem perguntar\n"
-"  confdef [!]            Usar as opções padrões para novos ficheiros de "
-"configuração se um\n"
-"                         estiver disponível, não perguntar. Se nenhum padrão "
-"pode ser encontrado,\n"
-"                         você será questionado a menos que uma das opções, "
-"confold ou\n"
-"                         confnew também sejam dadas\n"
+"  overwrite              Substituir um ficheiro de um pacote com outro\n"
+"  overwrite-diverted     Substituir um ficheiro desviado com uma versão sem desvios\n"
+"  bad-verify             Instalar um pacote mesmo que falhe a verificação de autenticidade\n"
+"  depends-version [!]    Tornar problemas de dependências de versão em avisos\n"
+"  depends [!]            Tornar todos os problemas de dependências em avisos\n"
+"  confnew [!]            Utilizar sempre os novos ficheiros de configuração, sem perguntar\n"
+"  confold [!]            Utilizar sempre os antigos ficheiros de configuração, sem perguntar\n"
+"  confdef [!]            Utilizar as opções pré-definidas para novos \n"
+"                         ficheiros de configuração se estiver algum \n"
+"                         disponível, sem perguntar. Se não for encontrada uma\n"
+"                         pré-definição, você será questionado a menos que seja\n"
+"                         utilizada uma das opções confold ou confnew\n"
 "  confmiss [!]           Instalar sempre ficheiros de configuração em falta\n"
 "  conflicts [!]          Permitir instalação de pacotes em conflito\n"
-"  architecture [!]       Processar até mesmo pacotes com arquitetura errada\n"
-"  overwrite-dir [!]      Sobrescrever um diretório de um pacote com um "
-"ficheiro de outro\n"
+"  architecture [!]       Processar até pacotes com arquitetura errada\n"
+"  overwrite-dir [!]      Substituir o diretório de um pacote por um ficheiro\n"
+"                         de outro\n"
 "  remove-reinstreq [!]   Remover pacotes que necessitem de instalação\n"
 "  remove-essential [!]   Remover um pacote essencial\n"
 "\n"
-"AVISO - o uso das opções marcadas com [!] pode danificar seriamente a sua "
-"instalação.\n"
-"Opções para forçar marcadas com [*] estão habilitadas por omissão.\n"
+"AVISO - as opções marcadas com [!] podem danificar seriamente a sua instalação.\n"
+"Opções para forçar marcadas com [*] estão habilitadas por pré-definição.\n"
 
 #: src/main.c:366
 #, c-format
