--- a/scripts/po/fr.po
+++ b/scripts/po/fr.po
@@ -1794,8 +1794,8 @@ msgstr ""
 "« fast »)\n"
 "\n"
 "Options d'extraction :\n"
-"  -no-copy                   ne pas copier l'archive originale\n"
-"  -no-check                  ne pas contrôler la signature et les\n"
+"  --no-copy                  ne pas copier l'archive originale\n"
+"  --no-check                 ne pas contrôler la signature et les\n"
 "                             sommes de contrôle avant de décompacter.\n"
 "\n"
 "Options générales :\n"
