--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
 dpkg (1.14.20) UNRELEASED; urgency=low
 
+  [ Guillem Jover ]
   * Change UTF-8 '©' to '(C)' in deb-version.5 (unfuzzy translations).
   * Document --force-breaks in 'dpkg --force-help' output.
   * Document triggers --debug values in dpkg.1. Thanks to Sven Joachim.
+
+  [ Raphael Hertzog ]
+  * Add missing 'use File::Path' in Dpkg::Source::Package::V3::quilt.
 
   [ Updated dpkg translations ]
   * German (Sven Joachim).
