dpkg-source: improve compatibility of 3.0 (quilt) with existing patch systems
* scripts/Dpkg/Source/Package/V3/quilt.pm: Remove the .diff
from the name of the automatically generated patch. It will
facilitate the switch to this format: packages using
patch system that apply debian/patches/*.{patch,diff}
will not be bothered by the presence of the quilt series
created by dpkg-source itself.
* man/dpkg-source.1: Update the documentation accordingly.
* man/po/*.po: Fix all the filenames to avoid fuzzying
translations.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2008-05-23  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/Dpkg/Source/Package/V3/quilt.pm: Remove the .diff
+	from the name of the automatically generated patch. It will
+	facilitate the switch to this format: packages using
+	patch system that apply debian/patches/*.{patch,diff}
+	will not be bothered by the presence of the quilt serie
+	created by dpkg-source itself.
+	* man/dpkg-source.1: Update the documentation accordingly.
+	* man/po/*.po: Fix all the filenames to avoid fuzzying
+	translations.
+
 2008-05-22  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/Dpkg/Source/Package/V3/quilt.pm: Add missing "use
