--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,10 @@ dpkg (1.14.20) UNRELEASED; urgency=low
 
   [ Raphael Hertzog ]
   * Add missing 'use File::Path' in Dpkg::Source::Package::V3::quilt.
+  * Use debian/patches/debian-changes-<version> (without the trailing ".diff")
+    as default name for the automatic patch created by the format "3.0
+    (quilt)". This ensures a saner cohabitation with patch systems that
+    apply all of debian/patches/*.{diff,patch}.
 
   [ Updated dpkg translations ]
   * German (Sven Joachim).
