--- a/man/dpkg-source.1
+++ b/man/dpkg-source.1
@@ -371,10 +371,10 @@ patches have been applied during the extraction.
 All original tarballs found in the current directory are extracted in a
 temporary directory by following the same logic as for the unpack, the
 debian directory is copied over in the temporary directory, and all
-patches except \fBdebian-changes-\fP\fIversion\fP\fB.diff\fP are applied.
+patches except \fBdebian-changes-\fP\fIversion\fP are applied.
 The temporary directory is compared to the source package directory
 and the diff (if non-empty) is stored in
-\fBdebian/patches/debian-changes-\fP\fIversion\fP\fB.diff\fP. Any change
+\fBdebian/patches/debian-changes-\fP\fIversion\fP. Any change
 on a binary file is not representable in a diff and will thus lead to a
 failure unless the maintainer deliberately decided to include that
 modified binary file in the debian tarball (by listing it in
