--- a/man/po/sv.po
+++ b/man/po/sv.po
@@ -9746,9 +9746,9 @@ msgid ""
 "All original tarballs found in the current directory are extracted in a "
 "temporary directory by following the same logic as for the unpack, the "
 "debian directory is copied over in the temporary directory, and all patches "
-"except B<debian-changes->I<version>B<.diff> are applied.  The temporary "
+"except B<debian-changes->I<version> are applied.  The temporary "
 "directory is compared to the source package directory and the diff (if non-"
-"empty) is stored in B<debian/patches/debian-changes->I<version>B<.diff>. Any "
+"empty) is stored in B<debian/patches/debian-changes->I<version>. Any "
 "change on a binary file is not representable in a diff and will thus lead to "
 "a failure unless the maintainer deliberately decided to include that "
 "modified binary file in the debian tarball (by listing it in B<debian/source/"
@@ -9759,9 +9759,9 @@ msgstr ""
 "Alla original-tarbollar som finns i den aktuella katalogen packas upp i en "
 "temporär katalog med samma logik som i uppackningen, debian-katalogen "
 "kopieras över i den temporära katalogen och alla patchar, förutom B<debian-"
-"changes->I<version>B<.diff> tillämpas. Temporärkatalogen jämförs därefter "
+"changes->I<version> tillämpas. Temporärkatalogen jämförs därefter "
 "mot källkodskatalogen och diffen (om den inte är tom) lagras i B<debian/"
-"patches/debian-changes->I<version>B<.diff>. Eventuella ändringar på "
+"patches/debian-changes->I<version>. Eventuella ändringar på "
 "binärfiler kan inte representeras i diffen och kommer därmed att leda till "
 "ett felmeddelande, såvida inte paketansvariga medvetet väljer att inkludera "
 "den modifierade binärfilen i debian-tarbollen (genom att lista den i "
