dpkg-trigger: Remove duplicate program name from badusage output

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-05-24  Guillem Jover  <guillem@debian.org>
+
+	* src/trigcmd.c (main): Remove duplicate program name from badusage.
+
 2008-05-19  Martin Koeppe  <mkoeppe@gmx.de>,
             Guillem Jover  <guillem@debian.org>
 
