--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ dpkg (1.15.0) UNRELEASED; urgency=low
     Based on a patch by Ben Finney.
   * Fix link order when using libcompat.a and libintl.a by placing them after
     libdpkg.a. Based on a patch by Martin Koeppe. Closes: #481805
+  * Remove duplicate program name from dpkg-trigger badusage output.
 
   [ Raphael Hertzog ]
   * Enhance dpkg-shlibdeps's error message when a library can't be found to
