Use sizeof_array instead of ad-hoc calculation

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2008-05-24  Guillem Jover  <guillem@debian.org>
 
+	* dpkg-deb/main.c: Include <dpkg-priv.h>.
+	(setaction): Use sizeof_array instead of ad-hoc calculation.
+	* dpkg-split/main.c: Include <dpkg-priv.h>.
+	(setaction): Use sizeof_array instead of ad-hoc calculation.
+
+2008-05-24  Guillem Jover  <guillem@debian.org>
+
 	* src/trigcmd.c (main): Remove duplicate program name from badusage.
 
 2008-05-19  Martin Koeppe  <mkoeppe@gmx.de>,
