Resolved FIXMEs in German man page translation (+ fixes + one new paragraph)

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,8 @@
+2008-05-25  Helge Kreutzmann  <debian@helgefjell.de>
+
+	* po/de.po: Updated to 1591t0f9u and further fixes found/FIXMEs
+	removed.
+
 2008-05-22  Helge Kreutzmann  <debian@helgefjell.de>
 
 	* po/de.po: Updated to 1590t0f10u and one improvement (thanks Sven)
