Fixed a typo in dselect.1 and notified affected translators

--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,9 @@ dpkg (1.14.20) UNRELEASED; urgency=low
     (quilt)". This ensures a saner cohabitation with patch systems that
     apply all of debian/patches/*.{diff,patch}.
 
+  [ Helge Kreutzmann ]
+  * Fix a typo in dselect.1
+
   [ Updated dpkg translations ]
   * German (Sven Joachim).
   * Swedish (Peter Karlsson).
