--- a/man/dselect.1
+++ b/man/dselect.1
@@ -390,7 +390,7 @@ cause the currently selected package to be listed.
 .sp
 When the sublist of packages is displayed initially, \fBdselect\fP
 may have already set the requested selection status of some of the
-listed packages, in order to resolve the depends of conflicts that
+listed packages, in order to resolve the depends or conflicts that
 caused the dependency resolution screen to be displayed. Usually,
 it is best to follow up the suggestions made by \fBdselect\fP.
 .sp
