--- a/man/po/sv.po
+++ b/man/po/sv.po
@@ -5,13 +5,13 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-05-13 05:52+0300\n"
+"POT-Creation-Date: 2008-05-26 21:16+0200\n"
 "PO-Revision-Date: 2008-05-13 09:23+0100\n"
 "Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit"
+"Content-Transfer-Encoding: 8bit\n"
 
 # type: Plain text
 #: ../../man/822-date.1:2
@@ -9746,28 +9746,28 @@ msgid ""
 "All original tarballs found in the current directory are extracted in a "
 "temporary directory by following the same logic as for the unpack, the "
 "debian directory is copied over in the temporary directory, and all patches "
-"except B<debian-changes->I<version> are applied.  The temporary "
-"directory is compared to the source package directory and the diff (if non-"
-"empty) is stored in B<debian/patches/debian-changes->I<version>. Any "
-"change on a binary file is not representable in a diff and will thus lead to "
-"a failure unless the maintainer deliberately decided to include that "
-"modified binary file in the debian tarball (by listing it in B<debian/source/"
-"include-binaries>). The build will also fail if it finds binary files in the "
-"debian sub-directory unless they have been whitelisted through B<debian/"
-"source/include-binaries>."
+"except B<debian-changes->I<version> are applied.  The temporary directory is "
+"compared to the source package directory and the diff (if non-empty) is "
+"stored in B<debian/patches/debian-changes->I<version>. Any change on a "
+"binary file is not representable in a diff and will thus lead to a failure "
+"unless the maintainer deliberately decided to include that modified binary "
+"file in the debian tarball (by listing it in B<debian/source/include-"
+"binaries>). The build will also fail if it finds binary files in the debian "
+"sub-directory unless they have been whitelisted through B<debian/source/"
+"include-binaries>."
 msgstr ""
 "Alla original-tarbollar som finns i den aktuella katalogen packas upp i en "
 "temporär katalog med samma logik som i uppackningen, debian-katalogen "
 "kopieras över i den temporära katalogen och alla patchar, förutom B<debian-"
-"changes->I<version> tillämpas. Temporärkatalogen jämförs därefter "
-"mot källkodskatalogen och diffen (om den inte är tom) lagras i B<debian/"
-"patches/debian-changes->I<version>. Eventuella ändringar på "
-"binärfiler kan inte representeras i diffen och kommer därmed att leda till "
-"ett felmeddelande, såvida inte paketansvariga medvetet väljer att inkludera "
-"den modifierade binärfilen i debian-tarbollen (genom att lista den i "
-"B<debian/source/include-binaries>). Byggningen kommer även att misslyckas om "
-"binärfiler upptäcks i debian-underkatalogen, såvida de inte har vitlistats i "
-"B<debian/source/include-binaries>."
+"changes->I<version> tillämpas. Temporärkatalogen jämförs därefter mot "
+"källkodskatalogen och diffen (om den inte är tom) lagras i B<debian/patches/"
+"debian-changes->I<version>. Eventuella ändringar på binärfiler kan inte "
+"representeras i diffen och kommer därmed att leda till ett felmeddelande, "
+"såvida inte paketansvariga medvetet väljer att inkludera den modifierade "
+"binärfilen i debian-tarbollen (genom att lista den i B<debian/source/include-"
+"binaries>). Byggningen kommer även att misslyckas om binärfiler upptäcks i "
+"debian-underkatalogen, såvida de inte har vitlistats i B<debian/source/"
+"include-binaries>."
 
 # type: Plain text
 #: ../../man/dpkg-source.1:387
@@ -11777,10 +11777,11 @@ msgstr ""
 
 # type: Plain text
 #: ../../man/dselect.1:396
+#, fuzzy
 msgid ""
 "When the sublist of packages is displayed initially, B<dselect> may have "
 "already set the requested selection status of some of the listed packages, "
-"in order to resolve the depends of conflicts that caused the dependency "
+"in order to resolve the depends or conflicts that caused the dependency "
 "resolution screen to be displayed. Usually, it is best to follow up the "
 "suggestions made by B<dselect>."
 msgstr ""
