--- a/man/po/pt_BR.po
+++ b/man/po/pt_BR.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2008-05-13 05:52+0300\n"
+"POT-Creation-Date: 2008-05-26 21:16+0200\n"
 "PO-Revision-Date: 2008-05-13 04:41+0300\n"
 "Last-Translator: Unknown translator\n"
 "Language-Team: Portuguese <debian-l10n-portuguese@lists.debian.org>\n"
@@ -8442,15 +8442,15 @@ msgid ""
 "All original tarballs found in the current directory are extracted in a "
 "temporary directory by following the same logic as for the unpack, the "
 "debian directory is copied over in the temporary directory, and all patches "
-"except B<debian-changes->I<version> are applied.  The temporary "
-"directory is compared to the source package directory and the diff (if non-"
-"empty) is stored in B<debian/patches/debian-changes->I<version>. Any "
-"change on a binary file is not representable in a diff and will thus lead to "
-"a failure unless the maintainer deliberately decided to include that "
-"modified binary file in the debian tarball (by listing it in B<debian/source/"
-"include-binaries>). The build will also fail if it finds binary files in the "
-"debian sub-directory unless they have been whitelisted through B<debian/"
-"source/include-binaries>."
+"except B<debian-changes->I<version> are applied.  The temporary directory is "
+"compared to the source package directory and the diff (if non-empty) is "
+"stored in B<debian/patches/debian-changes->I<version>. Any change on a "
+"binary file is not representable in a diff and will thus lead to a failure "
+"unless the maintainer deliberately decided to include that modified binary "
+"file in the debian tarball (by listing it in B<debian/source/include-"
+"binaries>). The build will also fail if it finds binary files in the debian "
+"sub-directory unless they have been whitelisted through B<debian/source/"
+"include-binaries>."
 msgstr ""
 
 # type: Plain text
@@ -10077,7 +10077,7 @@ msgstr ""
 msgid ""
 "When the sublist of packages is displayed initially, B<dselect> may have "
 "already set the requested selection status of some of the listed packages, "
-"in order to resolve the depends of conflicts that caused the dependency "
+"in order to resolve the depends or conflicts that caused the dependency "
 "resolution screen to be displayed. Usually, it is best to follow up the "
 "suggestions made by B<dselect>."
 msgstr ""
