--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,4 +1,9 @@
-2008-05-25  Helge Kreutzmann  <debian@helgefjell.de>
+2008-05-26  Helge Kreutzmann  <debian@helgefjell.de>
+
+	* dselect.1: Fixed a typoe and regenerated all po(t) files, including
+	  updating the German one.
+
+-25  Helge Kreutzmann  <debian@helgefjell.de>
 
 	* po/de.po: Updated to 1591t0f9u and further fixes found/FIXMEs
 	removed.
